package NYT.NProto;

option java_package = "tech.ytsaurus";
option java_multiple_files = true;

option go_package = "go.ytsaurus.tech/yt/go/proto/core/misc";

////////////////////////////////////////////////////////////////////////////////

message THyperLogLog
{
    required bytes data = 1;
}

////////////////////////////////////////////////////////////////////////////////
